Addressing pull request issues; -force OPUS ID to always be the last in the list; -add a vertical divider before OPUS ID -make OPUS ID non-draggable -Default behavior when there are only two items to sort on is to replace, not append -Allow ctrl and shift to append to the sort w/out confirm modal -Update the hint when there are no items left to add to the sort -Make the '+' more obviously 'disabled' in appearance when disabled -Change the title case in the modal header

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -1617,17 +1617,15 @@ panel are properly separated */
     /* padding-top: 0.5em; */
 }
 
-.op-sort-order-icon, .op-sort-order-add-icon {
+.op-sort-order-icon {
     opacity: 0.5 !important;
     vertical-align: middle;
-}
-
-.op-sort-order-icon {
     padding-right: .3em;
 }
 
 .op-sort-order-add-icon {
     margin-bottom: 0.1em !important;
+    vertical-align: middle;
 }
 
 .op-sort-contents {
@@ -1639,6 +1637,12 @@ panel are properly separated */
 .op-sort-contents .list-inline-item {
     opacity: 0.7;
     margin-bottom: -10px;
+}
+
+.op-no-sort {
+    border-left-style: solid;
+    border-width: 1px;
+    padding-left: .5em;
 }
 
 #op-add-sort-metadata .op-sort-list {
